<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">



    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clearB"
                android:text="@string/clear"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="#DD2C00" />

            <Button
                android:id="@+id/parenthesesB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parB"
                android:text="@string/parentheses"
                android:textSize="24sp" />


            <Button
                android:id="@+id/exponentB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="expB"
                android:text="@string/exponent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideB"
                android:text="@string/divide"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenB"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightB"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineB"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyB"
                android:text="@string/multiply"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourB"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveB"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixB"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractB"
                android:text="@string/subtract"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneB"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoB"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeB"
                android:text="@string/three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addB"
                android:text="@string/add"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusB"
                android:text="@string/plusMinus"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroB"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pointB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="decimalB"
                android:text="@string/point"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalsB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="equalB"
                android:text="@string/equals"
                android:textSize="24sp"
                app:backgroundTint="#43A047" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="false"
        android:background="#000"
        android:gravity="end"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/button40"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="4dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceB"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>